2009-07-20  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/tracker/totem-tracker-widget.c
	(totem_tracker_widget_init): Homogenise the Local Search plugin's
	appearance with the Jamendo and YouTube plugins. (Closes: #572292)

2009-07-20  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.in: Limit the Tracker versions we can build the Local
	Search plugin against to 0.6.x. (Closes: #580726)

2009-07-20  Philip Withnall  <philip@tecnocode.co.uk>

	* Makefile.am: Build the docs first, and the code last

2009-07-20  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/jamendo/jamendo.ui:
	* src/plugins/youtube/youtube.ui: Homogenise the appearance of the
	YouTube and Jamendo plugins. (Helps: #572292)

2009-07-20  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/lirc/totem_lirc_default: Add
	keys for zoom in/out (Closes: #545546)

2009-07-19  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/opensubtitles/opensubtitles.py:
	* src/plugins/opensubtitles/opensubtitles.ui: Fixed underlines in the
	OpenSubtitles interface, and removed use of a GLib 2.18-only function

2009-07-19  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (main):
	Add PA properties to the binary (Closes: #573912)

2009-07-19  Bastien Nocera  <hadess@hadess.net>

	* src/totem-audio-preview.c (main): Add PA properties
	to the binary (Closes: #573912)

2009-07-19  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Build the code first, and the docs last

2009-07-19  Philip Withnall  <philip@tecnocode.co.uk>

	* data/totem.ui:
	* src/plugins/opensubtitles/opensubtitles.py:
	* src/totem-menu.c (totem_subtitles_update): Move subtitles-related
	menu items to View → Subtitles. (Closes: #581366)

2009-07-19  Philip Withnall  <philip@tecnocode.co.uk>

	* data/fullscreen.glade:
	* data/mozilla-viewer.glade:
	* data/playlist.glade:
	* data/plugins.glade:
	* data/properties.glade:
	* data/totem.glade: